// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`empty 1`] = `"#000000"`;

exports[`empty 2`] = `
Color {
  "_rgb": [
    null,
    null,
    null,
    1,
  ],
}
`;

exports[`pink.darken.saturate 1`] = `
Color {
  "_rgb": [
    255,
    108.82130445767133,
    147.20575158719444,
    1,
  ],
}
`;
